# multi-agent-data-to-decisions

./: .dockerignore  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  test.py
agents/: __init__.py  data_scientist.py  group_chat.py  workspace.py
docker/: executor.Dockerfile
docs/: evaluation-template.md
docs/superpowers/plans/: 2026-07-18-uv-docker-remediation.md
docs/superpowers/specs/: 2026-07-18-uv-docker-remediation-design.md
multi_agents/: __init__.py  business_analyst.py  business_translator.py  coder.py  config.py  execution.py  runtime.py  workspace.py
tests/: test_agents.py  test_docker_smoke.py  test_documentation.py  test_events.py  test_execution.py  test_project_layout.py  test_runtime.py  test_streamlit_app.py  test_workspace.py
utils/: events.py  sidebar.py  utils.py
