[project]
name = "multi-agents-data-to-decisions"
version = "0.1.0"
description = "A multi-agent prototype for automated tabular data-science workflows."
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [
  { name = "Duy Tung Nguyen" },
]
dependencies = [
  "ag2[openai]==0.9.9",
  "pandas>=2.3.2,<3",
  "scikit-learn>=1.8.0,<2",
  "streamlit>=1.54.0,<2",
]

[dependency-groups]
dev = [
  "pytest>=9.0.0,<10",
  "ruff>=0.14.0,<1",
]
executor = [
  "pandas>=2.3.2,<3",
  "scikit-learn>=1.8.0,<2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "docker: requires a local Docker daemon and the executor image",
]

[tool.ruff]
target-version = "py312"
line-length = 100
